2014-04-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Improve arithmetic right shift.

2014-04-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Various small fixes and improvements.
	* src/stm8/ralloc.c
	  Prepare for register packing for assignment.

2014-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/z80-disasm.pl: Disassembler for the z80 family.

2014-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve left shift by literal, preparations for patch #234.
	* device/lib/_mulint.c:
	  Speed up integer multiplication by using casts.

2014-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient clearing of high bytes of x and y, more efficient right shift.
	* src/SDCCpeeph.c:
	  Better immdInRange, patch by Ben Shi.
	* src/stm8/peeph.def:
	  Peepholes to optimize stack adjustment.

2014-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/pic16fam-h-gen.pl: updated

2014-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/ralloc2.cc:
	  Improve bitwise and, improve choice of shift location.

2014-04-20 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic14/pic16fam.h:
	  Updated and moved here: device/include/pic14/pic16fam.h

2014-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/stm8/peeph.def:
	  Applied a variant of patch #237 by Ben Shi, implementing RFE #400.
	* src/stm8/gen.c:
	  Use mov for POINTER_SET where it makes sense.

2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/cinc2h.pl,
	  support/scripts/mcs51-disasm.pl,
	  support/scripts/optimize_pic16devices.pl,
	  support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl:
	  Updated the copyright date.

2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/include/pic14/pic14devices.txt,